...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.75">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_dialog_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_standart_background"
            android:inputType="number"
            android:maxLength="8" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_dialog_fragment"
        style="@style/bt_collections"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/bt_dialog_calculate"
        app:layout_constraintBottom_toBottomOf="parent"
...
