<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_collections"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:hint="@string/et_fragment_hint"
        android:textColorHint="@color/hint_text_color"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent="0.86">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_collections_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/views_background"
            android:focusable="false"
            android:text="@string/et_fragment_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_collections"
        style="@style/bt_collections"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingVertical="20dp"
        android:text="@string/bt_start"
        app:layout_constraintBottom_toBottomOf="@+id/til_collections"
        app:layout_constraintEnd_toEndOf="@+id/til_collections"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/til_collections"
        app:layout_constraintTop_toTopOf="@+id/til_collections"
        app:layout_constraintWidth_percent="0.30" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_collections"
        app:layout_constraintWidth_percent="0.86" />

</androidx.constraintlayout.widget.ConstraintLayout>
